# dread-mod-loader

./: .gitignore  README.md  pyproject.toml
.github/workflows/: create_release.yml
docs/dev/: 0-Overview.md  1-Creating a Mod.md  2-Mod Settings.md  3-Including an Asset Mod.md
docs/general/: 0-Getting Started.md  1-Safety.md
src/dread_mod_loader/: __init__.py  __main__.py  assets.py  load_mods.py  logger.py  mod.py  qss.py  settings.py
src/dread_mod_loader/gui/: configuration_dialog.py  cosmetic_configuration.py  export_dialog.py  help_dialog.py  main_window.py  markdown_dialog.py  scrollable_markdown.py  settings_dialog.py
src/dread_mod_loader/gui/custom_widgets/: file_dialog_button.py  non_scrollable_slider.py  non_scrollable_spin_box.py  saved_checkbox.py  saved_combo_box.py  saved_radio_button_group.py  saved_slider.py  slider_with_spin_box.py  usb_combo_box.py  validated_line_edit.py
src/dread_mod_loader/gui/ui_files/: configuration_dialog.ui  cosmetic_configuration.ui  export_dialog.ui  help.ui  main_window.ui  markdown_dialog.ui  mod_widget.ui  scrollable_markdown.ui  settings_dialog.ui
tests/: conftest.py  test_gui.py  test_load_mods.py  test_patch.py
tests/test_files/ili_ferun_tar_hadar/: ili_ferun_tar_hadar.json  mod_info.toml
tests/test_files/invalid_mod/: mod_info.toml
tests/test_files/testing_mod/: mod.py  mod_info.toml  settings.py
tools/: build_ui.bat  create_release.bat  create_release.py  start.bat
